Fixed layout issues with the username input in Firefox

--- a/resources/css/_game.scss
+++ b/resources/css/_game.scss
@@ -27,7 +27,9 @@ canvas {
 
 .logbox-header-bar {
 	@include display-flex;
+	@include align-items(center);
 
+	padding-left: .6em;
 	z-index: 2;
 	background-color: #fff;
 	border-bottom: 2px solid $borderGrey;
@@ -35,14 +37,13 @@ canvas {
 
 .username-input-wrap {
 	@include flex(1);
-	@include display-flex;
-	@include align-items(center);
-	padding: 0 .2em 0 .6em;
+	margin: 0 .2em;
 }
 
 .username-input {
-	@include flex(1);
+	width: 100%;
 	border: 0 none;
+	outline: none;
 	padding: .4em;
 	text-align: center;
 	font-weight: bold;
